--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -31,7 +31,7 @@
         <a th:href="@{/admin/forums}" href="#" class="m-item m-mobile-hide item" th:classappend="${n==4} ? 'active' "><i
             class="comments icon"></i>论坛</a>
         <a th:href="@{/admin/news}" href="#" class="m-item m-mobile-hide item" th:classappend="${n==5} ? 'active' "><i
-            class="envelope icon"></i>消息</a>
+            class="envelope icon"></i>反馈</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown item">
             <div class="text">
