--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -295,7 +295,7 @@
         th:src="@{/lib/picture/js/jkresponsivegallery.js}"></script>
 <script src="../static/lib/waypoints/jquery.waypoints.min.js"
         th:src="@{/lib/waypoints/jquery.waypoints.min.js}"></script>
-<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
+<!--<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>-->
 <script>
 
     $('.ui.dropdown').dropdown({
