--- a/src/main/resources/templates/friends_record.html
+++ b/src/main/resources/templates/friends_record.html
@@ -310,7 +310,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <!--第一种多人物的看板娘，缓存慢-->
-<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
+<!--<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>-->
 
 <script>
 
